--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "qm-ext",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "",
   "main": "index.js",
   "bin": {
-    "qm-ext": "index.js"
+    "qm": "bin/index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
